--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Психологическая помощь онлайн – Анна Лёвина, КПТ, кризисная терапия.">
   <meta name="keywords" content="психолог, депрессия, тревога, Алматы, онлайн">
   <meta property="og:title" content="Анна Лёвина">
-  <meta property="og:description" content="Анна Лёвина — квалифицированная психологическая поддержка онлайн и в Алматы.">
+  <meta property="og:description" content="Анна Лёвина — квалифицированная психологическая поддержка">
   
   <link rel="icon" href="favicon.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
