--- a/pimpl.html
+++ b/pimpl.html
@@ -127,7 +127,7 @@
 0086 0109`;
 
     if (window.location.hash !== `#${charCodesToUtf8String(AC)}`) {
-      //window.location.href = 'index.html';
+      window.location.href = 'index.html';
     }
   </script>
 
