--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 
 
       <nav class="menu" id="mainMenu">
-        <a href="#about">Обо мне</a>
-        <a href="#how_i_work">Мой подход</a>
-        <a href="#services">Услуги и цены</a>
-        <a href="#" class="consent-link">Соглашение</a>
-        <a href="#contact">Контакты</a>
+        <a href="#about" edicontent_id="obo-mne">Обо мне</a>
+        <a href="#how_i_work" edicontent_id="moy-podhod">Мой подход</a>
+        <a href="#services" edicontent_id="uslugi-i-tseny">Услуги и цены</a>
+        <a href="#" class="consent-link" edicontent_id="soglashenie">Соглашение</a>
+        <a href="#contact" edicontent_id="kontakty">Контакты</a>
       </nav>
-      <button class="hamburger-btn" id="hamburgerOpen" aria-label="Открыть меню">
+      <div class="hamburger-btn" id="hamburgerOpen" aria-label="Открыть меню">
         <span class="hamburger-icon">
           <span></span>
           <span></span>
           <span></span>
         </span>
-      </button>
+      </div>
     </div>
 
     <div class="announcement-bar">
@@ -61,11 +61,11 @@
         <button class="menu-close-btn" id="hamburgerClose" aria-label="Закрыть меню">×</button>
         <nav>
           <ul>
-            <li><a href="#about" class="menu-link">Обо мне</a></li>
-            <li><a href="#how_i_work" class="menu-link">Мой подход</a></li>
-            <li><a href="#services" class="menu-link">Услуги и цены</a></li>
-            <li><a href="#" class="menu-link consent-link">Соглашение</a></li>
-            <li><a href="#contact" class="menu-link">Контакты</a></li>
+            <li><a href="#about" class="menu-link" edicontent_id="obo-mne">Обо мне</a></li>
+            <li><a href="#how_i_work" class="menu-link" edicontent_id="moy-podhod">Мой подход</a></li>
+            <li><a href="#services" class="menu-link" edicontent_id="uslugi-i-tseny">Услуги и цены</a></li>
+            <li><a href="#" class="menu-link consent-link" edicontent_id="soglashenie">Соглашение</a></li>
+            <li><a href="#contact" class="menu-link" edicontent_id="kontakty">Контакты</a></li>
           </ul>
         </nav>
       </div>
@@ -85,10 +85,10 @@
         <div class="hero-slogan" edicontent_id="dobro-pozhalovat-v-puteshestvie-k-se"> Добро пожаловать в путешествие. <span class="no-break">К себе.</span> <span class="no-break">Без масок.</span></div>
         <!-- <h1>Анна Лёвина</h1> -->
         <!-- <p class="subtitle">Если вы здесь — возможно, настал момент что-то изменить</p> -->
-        <div class="hero-paragraphs" edicontent_id="ya-veryu-v-to-chto-sluchaynosti-ne-s">
-          <p>Я верю в то, что случайности не случайны. Если Вы оказались на этой страничке, возможно, что-то внутри больше не даёт жить по-прежнему. В какой-то момент приходит осознание: так больше нельзя — жить на автомате, вывозить, делать вид, держаться — впишите своё.  </p>
-          <blockquote>Я пока не знаю с чем именно Вы пришли. У меня нет универсальных ответов на Ваши вопросы. Я не всегда сразу понимаю, что делать в Вашей ситуации, потому что каждый человек — это отдельный мир со своим опытом, эмоциями, чувствами, мыслями, конфликтами, желаниями и мечтами.</blockquote>
-          <p>Что у меня точно есть — это интерес, определенные знания и собственный опыт. Я верю, что в точке настоящего человеческого контакта рождается нечто большее, чем просто диалог — это и есть психотерапевтическая алхимия. Если Вам важно разобраться в себе, почувствовать, дойти до сути — Вы на месте.</p>
+        <div class="hero-paragraphs">
+          <p edicontent_id="ya-veryu-v-to-chto-sluchaynosti-ne-s">Я верю в то, что случайности не случайны. Если Вы оказались на этой страничке, возможно, что-то внутри больше не даёт жить по-прежнему. В какой-то момент приходит осознание: так больше нельзя — жить на автомате, вывозить, делать вид, держаться — впишите своё.  </p>
+          <blockquote edicontent_id="ya-poka-ne-znayu-s-chem-imenno-vy-prishli">Я пока не знаю с чем именно Вы пришли. У меня нет универсальных ответов на Ваши вопросы. Я не всегда сразу понимаю, что делать в Вашей ситуации, потому что каждый человек — это отдельный мир со своим опытом, эмоциями, чувствами, мыслями, конфликтами, желаниями и мечтами.</blockquote>
+          <p edicontent_id="chto-u-menya-tochno-est-eto-interes">Что у меня точно есть — это интерес, определенные знания и собственный опыт. Я верю, что в точке настоящего человеческого контакта рождается нечто большее, чем просто диалог — это и есть психотерапевтическая алхимия. Если Вам важно разобраться в себе, почувствовать, дойти до сути — Вы на месте.</p>
         </div>
         <a href="#contact" class="cta-button">Записаться на встречу</a>
       </div>
@@ -104,7 +104,7 @@
     <div style="text-align: center; font-size: 2rem; color: var(--accent-color);">
         <i class="fas fa-user-circle"></i>
       </div>
-    <h2 class="section-title">Обо мне</h2>
+    <h2 class="section-title" edicontent_id="obo-mne">Обо мне</h2>
     <div class="container about-grid">
       <div class="about-image-block">
         <div class="about-lotus-effect">
@@ -112,7 +112,7 @@
         </div>
       </div>
       <div class="about-text-block">
-        <div class="about-panel pink" id="aboutWysiwyg" spellcheck="true" aria-label="Редактируемый текст обо мне">
+        <div class="about-panel pink" id="aboutWysiwyg" spellcheck="true" >
           <p edicontent_id="buduchi-podrostkom-ya-hotela-stat-su">Будучи подростком, я хотела стать судебным психологом, насмотревшись сериала Галифакс, но жизнь сложилась иначе. По первому образованию я — экономист-международник, много лет посвятила бизнесу и уже во взрослой жизни получила MBA в МГУ. Учиться в МГУ было голубой мечтой юности. Мой путь в психологию начался с личной терапии более 10 лет назад — за это время случилось много интересного. Экзистенциальный кризис середины жизни накрыл как следует и без предупреждения. Всё это привело к тому, что в какой-то момент я решила изменить привычную жизнь — прошла переподготовку по основам психологической науки и практики, начала работать с людьми, ушла из бизнеса и окончила магистратуру по клинической психологии. Теперь я психолог — не тот, из сериала, а тот, кем смогла стать — будем знакомы.</p>
         </div>
         </div>
@@ -133,7 +133,7 @@
       <div style="text-align: center; font-size: 2rem; color: var(--accent-color);">
         <i class="fas fa-seedling"></i>
       </div>
-      <h2 class="section-title">Мой подход</h2>
+      <h2 class="section-title" edicontent_id="moy-podhod">Мой подход</h2>
       
       <div style="margin-bottom:2rem">
         <div class="about-panel">
@@ -162,7 +162,7 @@
       <div style="text-align: center; font-size: 2rem; color: var(--accent-color);">
         <i class="fas fa-hands-helping"></i>
       </div>
-      <h2 class="section-title">Услуги и цены</h2>
+      <h2 class="section-title" edicontent_id="uslugi-i-tseny">Услуги и цены</h2>
       <div class="grid grid-2">
 
         <div class="card service-card fancy-service">
@@ -200,7 +200,7 @@
       <div style="text-align: center; font-size: 2rem; color: var(--accent-color);">
         <i class="fas fa-comments"></i>
       </div>
-      <h2 class="section-title">Отзывы</h2>
+      <h2 class="section-title" edicontent_id="otzyvy">Отзывы</h2>
       <div class="testimonials-scroll-btns">
         <button class="testimonial-scroll-btn left" aria-label="Листать влево"><i class="fas fa-chevron-left"></i></button>
         <button class="testimonial-scroll-btn right" aria-label="Листать вправо"><i class="fas fa-chevron-right"></i></button>
@@ -252,7 +252,7 @@
       <div style="text-align: center; font-size: 2rem; color: var(--accent-color); margin-bottom: 0.5rem;">
         <i class="fas fa-envelope-open-text"></i>
       </div>
-      <h2 class="section-title">Контакты</h2>
+      <h2 class="section-title" edicontent_id="kontakty">Контакты</h2>
       <p edicontent_id="gotovy-nachat-ili-est-voprosy-napish" style="margin-top: 2rem; text-align: center; font-size: var(--fs20); color: rgb(68, 68, 68);">
         Готовы начать или есть вопросы — напишите. Перед этим рекомендую ознакомиться с соглашением.
       </p>
@@ -260,7 +260,7 @@
       <div class="grid grid-2" style="margin-top: 2rem;">
         <div class="card consent-link" style="text-align: center;">
           <i class="fas fa-file-contract" style="font-size: 2rem; color: var(--accent-color);"></i>
-          <p><a href="#" class="contact-link">Соглашение</a></p>
+          <p><a href="#" class="contact-link" edicontent_id="soglashenie">Соглашение</a></p>
         </div>
 
         <div class="card" style="text-align: center;">
@@ -312,10 +312,10 @@
       <img src="logo.png" alt="Психолог Анна Лёвина" style="object-fit: contain; display: block;">
     </div>
     <div class="footer-col footer-right">
-      <a href="#about">Обо мне</a><br>
-      <a href="#how_i_work">Мой подход</a><br>
-      <a href="#services">Услуги и цены</a><br>
-      <a href="#testimonials">Отзывы</a>
+      <a href="#about" edicontent_id="obo-mne">Обо мне</a><br>
+      <a href="#how_i_work" edicontent_id="moy-podhod">Мой подход</a><br>
+      <a href="#services" edicontent_id="uslugi-i-tseny">Услуги и цены</a><br>
+      <a href="#testimonials" edicontent_id="otzyvy">Отзывы</a>
     </div>
   </div>
 </footer>
