--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Hamburger Menu Overlay -->
     <div class="menu-overlay" id="menuOverlay">
       <div class="menu-panel">
-        <button class="menu-close-btn" id="hamburgerClose" aria-label="Закрыть меню">×</button>
+        <div class="menu-close-btn" id="hamburgerClose" aria-label="Закрыть меню">×</div>
         <nav>
           <ul>
             <li><a href="#about" class="menu-link" edicontent_id="obo-mne">Обо мне</a></li>
@@ -260,7 +260,7 @@
       <div class="grid grid-2" style="margin-top: 2rem;">
         <div class="card consent-link" style="text-align: center;">
           <i class="fas fa-file-contract" style="font-size: 2rem; color: var(--accent-color);"></i>
-          <p><a href="#" class="contact-link" edicontent_id="soglashenie">Соглашение</a></p>
+          <p><a class="contact-link" edicontent_id="soglashenie">Соглашение</a></p>
         </div>
 
         <div class="card" style="text-align: center;">
